# par_matvec

./: .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CORRECTNESS_TESTS.md  Cargo.toml  LICENSE.md  README.md  parse_benchmarks.py  parse_criterion_benchmarks.py  profile_all.sh  submit.sh
benches/: parallel.rs  sequential.rs  sparse_matvec.rs
examples/: matrix_paths.rs
src/: dense_sparse_impl.rs  lib.rs  spmv_drivers.rs  test_utils.rs
src/sparse_dense_impl/: buffer_foreign.rs  merge.rs  mod.rs  simple.rs
tests/: correctness.rs  sequential_only.rs
