[package]
name = "par_matvec"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = "0.22.6"
faer-ext = "0.6.0"
nalgebra = "0.34.0"
nalgebra-sparse = { version = "0.11.0", features = ["io"] }
ndarray = "0.16.1"
num_cpus = "1.17.0"
rayon = "1.10.0"
spin = "0.10.0"
sprs = "0.11.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sparse_matvec"
harness = false
