[package]
name = "par_matvec"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8.3"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
faer = "0.22.6"
faer-ext = "0.6.0"
metis = "0.2.2"
nalgebra = "0.34.0"
nalgebra-sparse = "0.11.0"
matrix-market-rs = "0.1"
ndarray = "0.16.1"
num_cpus = "1.17.0"
rayon = "1.10.0"
spin = "0.10.0"
sprs = "0.11.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sparse_matvec"
harness = false

[profile.release]
debug = true
